--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -6,3 +6,10 @@
 
 .home .hero img
   max-width 450px!important
+  margin  0rem!important
+  display inline-flex!important
+
+h1 {
+   font-size 2rem!important
+   margin-top 0px !important;
+}
